--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier": "prettier --write '**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@types/node": "^14.11.2",
@@ -14,5 +15,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.1.2"
   }
 }
