--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "test": "tslint -p tsconfig.json -c tslint.yaml",
     "prettier": "prettier --write '**/*.{ts,tsx}'"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier",
+      "pre-push": "npm run test"
+    }
+  },
   "dependencies": {
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
@@ -18,6 +24,7 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
