Support TypeScript path aliases

--- a/tslint.yaml
+++ b/tslint.yaml
@@ -420,3 +420,7 @@ rules:
   no-implicit-dependencies:
     - true
     - dev
+    # Our custom aliases/absolute-pathes
+    - - '@components'
+      - '@styles'
+      - '@utils'
