--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
     "tslint": "^6.1.3",
