--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-build-time-constants/*secret*
+/build-time-constants/*secret*
 
 # dependencies
 /node_modules
@@ -16,6 +16,7 @@ build-time-constants/*secret*
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
