--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "test": "tslint -p tsconfig.json -c tslint.yaml",
+    "dev": "nodemon",
+    "build": "NODE_ENV=production next build && tsc --project server/tsconfig.json",
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "test": "npm run lint-nextjs && npm run lint-custom-server",
+    "lint-nextjs": "tslint -p tsconfig.json -c tslint.yaml",
+    "lint-custom-server": "tslint -p server/tsconfig.json -c tslint.yaml",
     "prettier": "prettier --write '**/*.{ts,tsx}'"
   },
   "husky": {
@@ -18,15 +20,28 @@
   "dependencies": {
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "clsx": "^1.1.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.8",
+    "@types/next-redux-wrapper": "^3.0.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-immutable-state-invariant": "^2.1.1",
+    "babel-plugin-import": "^1.13.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
+    "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
