--- a/package.json
+++ b/package.json
@@ -21,15 +21,25 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "next": "9.5.3",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/next-redux-wrapper": "^3.0.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-immutable-state-invariant": "^2.1.1",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "redux-immutable-state-invariant": "^2.1.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
