--- a/package.json
+++ b/package.json
@@ -25,8 +25,14 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "next": "9.5.3",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
@@ -41,6 +47,7 @@
     "husky": "^4.3.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "redux-immutable-state-invariant": "^2.1.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
