--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "clsx": "^1.1.1",
     "next": "9.5.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
@@ -35,6 +38,7 @@
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/redux-immutable-state-invariant": "^2.1.1",
+    "babel-plugin-import": "^1.13.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
     "nodemon": "^2.0.4",
