--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
       "@store/*": ["store/*"],
       "@styles": ["styles"],
       "@styles/*": ["styles/*"],
+      "@themes": ["themes"],
+      "@themes/*": ["themes/*"],
       "@utils": ["utils"],
       "@utils/*": ["utils/*"]
     }
