--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "clsx": "^1.1.1",
