--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^16.9.49",
     "clsx": "^1.1.1",
     "next": "9.5.3",
+    "next-i18next": "^6.0.3",
     "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
