--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# from nextjs-boilerplate config
 /build-time-constants/*secret*
+/logs
 
 # dependencies
 /node_modules
