--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/icons": "^4.9.1",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
+    "chalk": "^4.1.0",
     "clsx": "^1.1.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -36,7 +37,9 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
