--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "clsx": "^1.1.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "next": "9.5.3",
     "next-i18next": "^6.0.3",
     "next-redux-wrapper": "^6.0.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.1",
@@ -38,16 +41,21 @@
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3",
+    "uid-safe": "^2.1.5",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.8",
     "@types/next-redux-wrapper": "^3.0.0",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "@types/react-redux": "^7.1.9",
     "@types/redux-immutable-state-invariant": "^2.1.1",
+    "@types/uid-safe": "^2.1.2",
     "babel-plugin-import": "^1.13.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
