Add Twitter auth strategy

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-redux-wrapper": "^6.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.1",
@@ -53,6 +54,7 @@
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
+    "@types/passport-twitter": "^1.0.36",
     "@types/react-redux": "^7.1.9",
     "@types/redux-immutable-state-invariant": "^2.1.1",
     "@types/uid-safe": "^2.1.2",
