--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "nodemon",
     "build": "NODE_ENV=production next build && tsc --project server/tsconfig.json",
     "start": "NODE_ENV=production node ./dist/server/index.js",
-    "test": "npm run lint-nextjs && npm run lint-custom-server",
+    "test": "npm run test-only && npm run lint",
+    "test-only": "jest",
+    "test-debug": "node --inspect node_modules/jest/bin/jest.js --watch --runInBand",
+    "lint": "npm run lint-nextjs && npm run lint-custom-server",
     "lint-nextjs": "tslint -p tsconfig.json -c tslint.yaml",
     "lint-custom-server": "tslint -p server/tsconfig.json -c tslint.yaml",
     "prettier": "prettier --write '**/*.{ts,tsx}'"
@@ -51,19 +54,25 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.16",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/passport": "^1.0.4",
     "@types/passport-local": "^1.0.33",
     "@types/passport-twitter": "^1.0.36",
     "@types/react-redux": "^7.1.9",
     "@types/redux-immutable-state-invariant": "^2.1.1",
+    "@types/sinon": "^9.0.9",
     "@types/uid-safe": "^2.1.2",
+    "babel-jest": "^26.6.3",
     "babel-plugin-import": "^1.13.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "redux-immutable-state-invariant": "^2.1.0",
+    "sinon": "^9.2.1",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
