Handle images with url-loader and file-loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
+      "@assets": ["assets"],
+      "@assets/*": ["assets/*"],
       "@components": ["components"],
       "@components/*": ["components/*"],
       "@model": ["model"],
