--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/uid-safe": "^2.1.2",
     "babel-jest": "^26.6.3",
     "babel-plugin-import": "^1.13.0",
+    "file-loader": "^6.2.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
@@ -80,6 +81,7 @@
     "tslint-lines-between-class-members": "^1.3.6",
     "tslint-loader": "^3.5.4",
     "tslint-microsoft-contrib": "^6.2.0",
-    "tslint-react": "^5.0.0"
+    "tslint-react": "^5.0.0",
+    "url-loader": "^4.1.1"
   }
 }
