Disable tslint ter-indent since it doesn't work well with prettier

--- a/tslint.yaml
+++ b/tslint.yaml
@@ -192,10 +192,7 @@ rules:
 
   # https://github.com/buzinas/tslint-eslint-rules/blob/master/src/docs/rules/terIndentRule.md
   # builtin in tslint not really working :( https://github.com/palantir/tslint/issues/2814
-  ter-indent:
-    - true
-    - 2
-    - SwitchCase: 1
+  ter-indent: false
 
   # https://palantir.github.io/tslint/rules/whitespace/
   whitespace:
