--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^10.0.6",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.42",
