--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
+      "@api": ["api"],
+      "@api/*": ["api/*"],
       "@assets": ["assets"],
       "@assets/*": ["assets/*"],
       "@components": ["components"],
