--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
-    "next": "9.5.3",
+    "next": "^10.2.0",
     "next-i18next": "^6.0.3",
     "next-redux-wrapper": "^6.0.2",
     "passport": "^0.4.1",
