--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # from nextjs-boilerplate config
-/build-time-constants/*secret*
+/build-time-constants/**/*secret.js
 /logs
 
 # dependencies
