--- a/package.json
+++ b/package.json
@@ -21,61 +21,65 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@types/node": "^14.11.2",
-    "@types/react": "^16.9.49",
-    "chalk": "^4.1.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "chalk": "^4.1.1",
     "clsx": "^1.1.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
-    "next": "9.5.3",
+    "next": "^10.2.0",
     "next-i18next": "^6.0.3",
     "next-redux-wrapper": "^6.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.2.4",
     "uid-safe": "^2.1.5",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "winston-daily-rotate-file": "^4.5.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.0.6",
+    "@babel/core": "^7.14.0",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
+    "@next/bundle-analyzer": "^10.2.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.42",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.16",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/next-redux-wrapper": "^3.0.0",
-    "@types/passport": "^1.0.4",
+    "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
     "@types/passport-twitter": "^1.0.36",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-redux": "^7.1.16",
     "@types/redux-immutable-state-invariant": "^2.1.1",
-    "@types/sinon": "^9.0.9",
+    "@types/sinon": "^10.0.0",
     "@types/uid-safe": "^2.1.2",
+    "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
-    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-import": "^1.13.3",
     "file-loader": "^6.2.0",
-    "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.1.2",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "redux-immutable-state-invariant": "^2.1.0",
-    "sinon": "^9.2.1",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
+    "sinon": "^10.0.0",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
