Reorganize components into better folder structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
       "@components/*": ["components/*"],
       "@model": ["model"],
       "@model/*": ["model/*"],
+      "@page-components": ["page-components"],
+      "@page-components/*": ["page-components/*"],
       "@store": ["store"],
       "@store/*": ["store/*"],
       "@styles": ["styles"],
