--- a/tslint.yaml
+++ b/tslint.yaml
@@ -423,6 +423,7 @@ rules:
       - '@assets'
       - '@components'
       - '@model'
+      - '@page-components'
       - '@store'
       - '@styles'
       - '@test'
