--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "nodemon",
-    "build": "NODE_ENV=production next build && tsc --project server/tsconfig.json",
+    "build": "NODE_ENV=production npm run build:next && npm run build:server",
+    "build:next": "next build",
+    "build:server": "tsc --project server/tsconfig.json && node ./build-tools/ts-alias.js",
     "start": "NODE_ENV=production node ./dist/server/index.js",
     "test": "npm run test-only && npm run lint",
     "test-only": "jest",
@@ -81,6 +83,7 @@
     "sinon": "^10.0.0",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "tslint": "^6.1.3",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
