--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "nanoid": "^3.1.23",
     "next": "^11.0.1",
     "next-i18next": "^8.5.3",
     "next-redux-wrapper": "^7.0.2",
