--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "identity-obj-proxy": "^3.0.0",
     "next": "^11.1.4",
     "next-i18next": "^8.5.3",
     "next-redux-wrapper": "^7.0.2",
@@ -52,15 +53,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.14.1",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-react": "^7.16.7",
     "@next/bundle-analyzer": "^10.2.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.5.0",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
@@ -69,18 +69,17 @@
     "@types/redux-immutable-state-invariant": "^2.1.1",
     "@types/sinon": "^10.0.0",
     "@types/uid-safe": "^2.1.2",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-import": "^1.13.3",
+    "babel-jest": "^27.5.1",
+    "babel-plugin-import": "^1.13.5",
     "file-loader": "^6.2.0",
     "husky": "^4.3.0",
-    "jest": "^26.6.3",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "sass": "^1.34.1",
     "sinon": "^10.0.0",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27.1.4",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^6.1.3",
