Enable typechecks on testing

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "build:server": "npm run build:server:tsc && npm run build:server:alias",
     "build:server:tsc": "node_modules/.bin/ts-node --project ./build-tools/tsconfig.json node_modules/.bin/tsc  --project server/tsconfig.json",
     "build:server:alias": "node_modules/.bin/ts-node --project ./build-tools/tsconfig.json ./build-tools/ts-alias.ts",
+    "typecheck": "npm run typecheck:next && npm run typecheck:server",
+    "typecheck:next": "tsc --noEmit --project tsconfig.json",
+    "typecheck:server": "tsc --noEmit --project server/tsconfig.json",
     "start": "NODE_ENV=production node ./dist/server/index.js",
-    "test": "npm run test-only && npm run lint",
+    "test": "npm run test-only && npm run lint && npm run typecheck",
     "test-only": "jest",
     "test-debug": "node --inspect node_modules/jest/bin/jest.js --watch --runInBand",
     "lint": "npm run lint-nextjs && npm run lint-custom-server",
